# good-first-issue

./: .env.example  .gitignore  CLAUDE_RENDER_PROMPT.txt  CONTRIBUTING.md  DEMO.md  DEPLOY.md  FEATURES_ADDED.md  LAUNCH_CHECKLIST.md  LAUNCH_KIT.md  LAUNCH_POSTS_UPDATED.md  LAUNCH_READY.md  LICENSE  POSTED.md  README.md  REDDIT_RESPONSE_GUIDE.md  REDEPLOY_NOW.md  SCREENSHOT_GUIDE.md  SHARING.md  TEST_RESULTS.md  TODO_BEFORE_LAUNCH.md  VIRAL_FEATURES.md  gfi_results_yakub268_20260220_153243.json  pyproject.toml  reddit_post.md  render.yaml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: SHOWCASE.md
gfi/: __init__.py  analyzer.py  cache.py  card.py  cli.py  display.py  export.py  github.py  gitlab.py  graphql.py  scorer.py  success.py  telemetry.py  viral.py  watch.py
scripts/: generate_screenshots.py
tests/: test_cache.py  test_card.py  test_export.py  test_gitlab.py  test_graphql.py  test_labels.py  test_scorer.py  test_success.py  test_watch.py
web/: README.md  app.py  debug_api.py  requirements.txt
web/templates/: index.html  wins.html
